# TTP

./: Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
cli/: Cargo.toml
cli/src/: bin.rs  main.rs  ui.rs
core/: Cargo.toml
core/src/: communication_types.rs  communication_value.rs  data_container.rs  data_types.rs  data_value.rs  lib.rs  util.rs
core/src/communication/: communication_types.rs  communication_value.rs  data_container.rs  data_types.rs  mod.rs
core/src/log/: logger.rs
native/: Cargo.toml
native/src/: client.rs  connection.rs  connection_handle.rs  error.rs  host.rs  lib.rs
wasm/: Cargo.toml
web/: context.tsx  core.ts  values.ts
