[package]
name = "epsilon-native"
version = "0.1.0"
edition = "2024"

[dependencies]
epsilon-core = { path = "../core" }
quinn = { version = "0.11.9", features = ["rustls-ring", "rustls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytes = "1"
thiserror = "2.0.18"
