[package]
name = "epsilon-native"
version = "0.1.0"
edition = "2024"

[dependencies]
epsilon-core = { path = "../core" }
wtransport = { version = "0.7.0", default-features = false, features = [
    "aws-lc-rs",
    "quinn",
    "self-signed",
] }
rustls = { version = "0.23.37" }
quinn = { version = "0.11.9", default-features = false, features = [
    "rustls-aws-lc-rs",
    "rustls",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.18"
rustls-native-certs = "0.8.3"
